--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -40,7 +40,7 @@
       <widget class="QWidget" name="page_2">
        <layout class="QHBoxLayout" name="horizontalLayout_6">
         <item>
-         <widget class="QWidget" name="videoWidget" native="true"/>
+         <widget class="VideoWidget" name="videoWidget" native="true"/>
         </item>
        </layout>
       </widget>
@@ -54,6 +54,9 @@
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
            <widget class="QPushButton" name="playBtn">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string>播放</string>
             </property>
@@ -61,6 +64,9 @@
           </item>
           <item>
            <widget class="QPushButton" name="stopBtn">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string>暂停</string>
             </property>
@@ -69,7 +75,10 @@
          </layout>
         </item>
         <item>
-         <widget class="QSlider" name="currentlSlider">
+         <widget class="VideoSlider" name="currentlSlider">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="minimumSize">
            <size>
             <width>200</width>
@@ -115,18 +124,27 @@
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
            <widget class="QPushButton" name="silenceBtn">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string>静音</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QSlider" name="volumnSlider">
+           <widget class="VideoSlider" name="volumnSlider">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="minimumSize">
              <size>
               <width>100</width>
               <height>0</height>
              </size>
+            </property>
+            <property name="value">
+             <number>99</number>
             </property>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -160,6 +178,19 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>VideoWidget</class>
+   <extends>QWidget</extends>
+   <header location="global">videowidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>VideoSlider</class>
+   <extends>QSlider</extends>
+   <header location="global">videoslider.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
