--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -123,7 +123,7 @@
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
-           <widget class="QPushButton" name="silenceBtn">
+           <widget class="QPushButton" name="muteBtn">
             <property name="enabled">
              <bool>false</bool>
             </property>
